deploy/k8s/manifests/redis-generate.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-generate
spec:
  selector:
    app: redis-generate
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-generate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-generate
  template:
    metadata:
      labels:
        app: redis-generate
    spec:
      securityContext:
        fsGroup: 999
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: redis
          image: redis:7-alpine
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsUser: 999
          args:
            - redis-server
            - --appendonly
            - "yes"
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 1Gi
      volumes:
        - name: data
          emptyDir: {}
